// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot custom 1`] = `
<YozoraMath
  className="custom-class"
  style={
    Object {
      "background": "hsla(210deg, 13%, 12%, 0.05)",
      "border": "1px solid blue",
      "color": "#d81848",
      "margin": "0 2px",
      "padding": "2px",
    }
  }
  value="
\\\\begin{align}
  f(x) = \\\\left\\\\lbrace
    \\\\begin{aligned}
      &x^2, &x < 0 \\\\\\\\
      &\\\\frac{1}{x^3}, &x > 0
    \\\\end{aligned}
  \\\\right.
\\\\end{align}
"
>
  <MathJaxNode
    className="yozora-math custom-class"
    formula="
\\\\begin{align}
  f(x) = \\\\left\\\\lbrace
    \\\\begin{aligned}
      &x^2, &x < 0 \\\\\\\\
      &\\\\frac{1}{x^3}, &x > 0
    \\\\end{aligned}
  \\\\right.
\\\\end{align}
"
    inline={false}
    style={
      Object {
        "background": "hsla(210deg, 13%, 12%, 0.05)",
        "border": "1px solid blue",
        "color": "#d81848",
        "margin": "0 2px",
        "padding": "2px",
      }
    }
  >
    <div
      className="yozora-math custom-class"
      style={
        Object {
          "background": "hsla(210deg, 13%, 12%, 0.05)",
          "border": "1px solid blue",
          "color": "#d81848",
          "margin": "0 2px",
          "padding": "2px",
        }
      }
    />
  </MathJaxNode>
</YozoraMath>
`;

exports[`snapshot default 1`] = `
<YozoraMath
  style={
    Object {
      "color": "orange",
      "fontSize": "16px",
    }
  }
  value="
\\\\begin{align}
  f(x) = \\\\left\\\\lbrace
    \\\\begin{aligned}
      &x^2, &x < 0 \\\\\\\\
      &\\\\frac{1}{x^3}, &x > 0
    \\\\end{aligned}
  \\\\right.
\\\\end{align}
"
>
  <MathJaxNode
    className="yozora-math"
    formula="
\\\\begin{align}
  f(x) = \\\\left\\\\lbrace
    \\\\begin{aligned}
      &x^2, &x < 0 \\\\\\\\
      &\\\\frac{1}{x^3}, &x > 0
    \\\\end{aligned}
  \\\\right.
\\\\end{align}
"
    inline={false}
    style={
      Object {
        "color": "orange",
        "fontSize": "16px",
      }
    }
  >
    <div
      className="yozora-math"
      style={
        Object {
          "color": "orange",
          "fontSize": "16px",
        }
      }
    />
  </MathJaxNode>
</YozoraMath>
`;
